--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,53 @@
+
+* {
+
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    background-color: #EEE;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    margin: auto;
+    background-color: rgb(39, 20, 20);
+    
+}
+
+.body_container {
+    width: 100%;
+    height: 100%;
+    color: wheat;
+    padding-top: 50px;
 }
 
 header {
     display: flex;
     justify-content: center;
+}
+
+.navbar {
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    padding-left: 10%;
+    position: relative;
+}
+
+.socials {
+    position: absolute;
+    
+    top: 100%;
+    color: wheat;
+    font-weight: bold;
+    font-size: 30px;
+    width: 400px;
+    height: 30px;
+    border: solid 1px;
+    justify-content: space-between;
 }
 
 button {
@@ -41,8 +84,8 @@ button {
     -moz-border-radius: 3px;
     border-radius: 3px;
     font-family: 'Helvetica Neue', Helvetica, sans-serif;
-    background-color: #f06060;
-    box-shadow: 0px 3px 0px 0px #cd1313;
+    /* background-color: #f06060;
+    box-shadow: 0px 3px 0px 0px #cd1313; */
     text-decoration: none;
 }
 
@@ -54,10 +97,10 @@ button:active {
     box-shadow: 0px 1px 0px 0px #cd1313;
 }
 
-#About {
+/* #About {
     background-color: #608ef0;
     box-shadow: 0px 3px 0px 0px #1364cd;
-}
+} */
 
 #About:hover {
     background-color: #449bed;
@@ -67,10 +110,10 @@ button:active {
     box-shadow: 0px 1px 0px 0px #1364cd;
 }
 
-#Contact {
+/* #Contact {
     background-color: #78f060;
     box-shadow: 0px 3px 0px 0px #13cd1c;
-}
+} */
 
 #Contact:hover {
     background-color: #60ed44;
@@ -85,3 +128,16 @@ button:active {
     text-align: center;
     margin: 40px auto;
 }
+
+img {
+    width: 100%;
+    display: block;
+    max-width: 1000px;
+    margin: auto;
+}
+
+
+/* .about_container {
+    width: 100%;
+    background-color: wheat;
+} */
