--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     height: 100%;
     box-sizing: border-box;
     margin: auto;
+    background-image: url('./img/background_img/avenue-gd1130bbce_1920.jpg');
     background-color: rgb(39, 20, 20);
     
 }
@@ -28,6 +29,7 @@ header {
 
 .navbar {
     position: fixed;
+    top: 50px;
     width: 100%;
     height: 50px;
     display: flex;
@@ -39,15 +41,24 @@ header {
 
 .socials {
     position: absolute;
-    
-    top: 100%;
-    color: wheat;
-    font-weight: bold;
-    font-size: 30px;
-    width: 400px;
+    right: 100px;
+    top: 50%;
+    width: 250px;
     height: 30px;
-    border: solid 1px;
-    justify-content: space-between;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0.7rem;
+    background-color: rgba(204, 204, 204, 0.5);
+    border-radius: 50px;
+}
+
+.social_icons {
+    color: orangered;
+    font-weight: bold;
+    font-size: 40px;
+    cursor: pointer;
+    
 }
 
 button {
@@ -64,7 +75,7 @@ button {
     margin-top: 10px;
     margin-right: 10px;
     padding: 15px 40px;
-    font-size: 14px;
+    font-size: 25px;
     line-height: 1em;
     text-shadow: 0 1px rgba(0, 0, 0, 0.4);
     color: white;
