--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,17 @@ body {
     height: 100%;
     box-sizing: border-box;
     margin: auto;
-    background-image: url('./img/background_img/avenue-gd1130bbce_1920.jpg');
+    background-image: url('./img/background_img/guitar-g85826b5d8_1920.jpg');
     background-color: rgb(39, 20, 20);
     
 }
 
 .body_container {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 250px;
     color: wheat;
     padding-top: 50px;
+    
 }
 
 header {
@@ -39,16 +40,28 @@ header {
     position: relative;
 }
 
+.title_logo {
+    position: absolute;
+    right: 10%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+    text-shadow: 0px 3px 5px #00000009;
+    color: wheat;
+    
+}
+
 .socials {
     position: absolute;
-    right: 100px;
-    top: 50%;
+    right: 10%;
+    top: 100%;
     width: 250px;
     height: 30px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 0.7rem;
+    padding: 0.3rem;
     background-color: rgba(204, 204, 204, 0.5);
     border-radius: 50px;
 }
@@ -56,7 +69,7 @@ header {
 .social_icons {
     color: orangered;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 30px;
     cursor: pointer;
     
 }
@@ -101,11 +114,24 @@ button {
 }
 
 button:hover {
-    background-color: #ed4444;
+    /* background-color: #ed4444; */
+    background-image: url('./img/background_img/guitar-g85826b5d8_1920.jpg');
+    background-position: center;
+    background-size: cover;
 }
 
 button:active {
     box-shadow: 0px 1px 0px 0px #cd1313;
+}
+
+.home_title {
+    font-size: 50px;
+}
+
+.home_p {
+    margin-top: 30px;
+    font-size: 30px;
+
 }
 
 /* #About {
@@ -114,7 +140,10 @@ button:active {
 } */
 
 #About:hover {
-    background-color: #449bed;
+    /* background-color: #449bed; */
+    background-image: url('./img/background_img/production-gcb26bc845_1920.jpg');
+    background-position: center;
+    background-size: cover;
 }
 
 #About:active {
@@ -127,7 +156,11 @@ button:active {
 } */
 
 #Contact:hover {
-    background-color: #60ed44;
+    /* background-color: #60ed44; */
+    color: transparent;
+    background-image: url('./img/background_img/contact-us-g9df68b3cc_1920.jpg');
+    background-position: center;
+    background-size: cover;
 }
 
 #Contact:active {
