--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ a {
     background-position: center;
     background-size: cover;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 
 }
@@ -59,8 +60,20 @@ a {
     z-index: -1;
 }
 
+.home_container2 p {
+    position: absolute;
+    left: 10%;
+    top: 105%;
+    width: 100%;
+    max-width: 300px;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+    color: rgb(49, 30, 6);
+}
+
 .bible {
-    width: 60%;
+    width: 100%;
     
 }
 
@@ -88,19 +101,20 @@ header {
 
 .navbar {
     position: fixed;
-    top: 50px;
+    top: 0;
     width: 100%;
     height: 50px;
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
-    padding-left: 10%;
+    padding-left: 0;
     
 }
 
 .title_logo {
     position: absolute;
     right: 10%;
+    top: 50px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -119,7 +133,7 @@ header {
 .socials {
     position: absolute;
     right: 10%;
-    top: 100%;
+    top: 200%;
     width: 300px;
     height: 30px;
     display: flex;
@@ -156,6 +170,7 @@ header {
 }
 
 li {
+    width: 20px;
     background: none;
     color: inherit;
     border: none;
@@ -169,7 +184,7 @@ li {
     margin-top: 10px;
     margin-right: 10px;
     padding: 15px 40px;
-    font-size: 25px;
+    font-size: 20px;
     line-height: 1em;
     text-shadow: 0 1px rgba(0, 0, 0, 0.4);
     color: white;
@@ -207,7 +222,7 @@ li:active {
 
 .home_info {
     margin-top: 38%;
-    margin-left: 30%;
+    margin-left: 20%;
     width: 100%;
     max-width: 900px;
 }
@@ -217,25 +232,26 @@ li:active {
     bottom: 10%;
     right: 5%; */
     
-    padding: 15% 10px 10px 10px;
+    padding-top: 10%;
     margin: auto;
-    width: 40%;
+    width: 100%;
     
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    
     box-sizing: border-box;
     position: relative;
     
 }
 
 .home_multimedia {
-    width: 100%;
-    max-width: 500px;
-    height: 300px;
-    display: flex;
     
+    width: 100%;
+    max-width: 300px;
+    height: 150px;
+    display: flex;
+    margin: auto;
     box-sizing: border-box;
     position: relative;
     box-shadow: 10px 13px 10px #0009;
@@ -252,15 +268,25 @@ li:active {
 }
 
 .home_title {
-    margin-top: 30px;
+    margin: auto;
+    margin-top: 380px;
     font-size: 50px;
 }
 
 .home_p {
-    
+    width: 100%;
+    max-width: 200px;
     font-size: 30px;
 
 }
+
+.about_content {
+    width: 100%;
+    height: 100%;
+        
+}
+
+
 
 /* #About {
     background-color: #608ef0;
@@ -313,3 +339,119 @@ img {
     width: 100%;
     background-color: wheat;
 } */
+
+
+@media (min-width: 850px) {
+    .navbar {
+        position: fixed;
+        top: 50px;
+        width: 100%;
+        height: 50px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-end;
+        padding-left: 10%;
+        
+    }
+
+    li {
+        width: 100px;
+        font-size: 25px;
+    }
+
+    .title_logo {
+        
+        top: 0;
+        
+    }
+    
+        
+    .socials {
+        
+        top: 100%;
+    }
+    
+    .home_container2 {
+        flex-direction: row;
+           
+    } 
+    
+    .home_container2 img {
+        margin-left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+    }
+    
+    .home_container2 p {
+        position: absolute;
+        left: 10%;
+        top: 120%;
+        width: 100%;
+        max-width: 600px;
+        display: flex;
+        justify-content: center;
+        font-size: 25px;
+        color: rgb(49, 30, 6);
+        
+    }
+    
+    .bible {
+        width: 60%;
+        
+    }
+
+    .home_info {
+        margin-top: 38%;
+        margin-left: 30%;
+        width: 100%;
+        max-width: 900px;
+    }
+
+    .home_title {
+        margin-top: 30px;
+        font-size: 50px;
+    }
+    
+    .home_p {
+        width: 100%;
+        max-width: 800px;
+        font-size: 30px;
+    
+    }
+
+    .multimedia_content {
+        /* position: absolute;
+        bottom: 10%;
+        right: 5%; */
+        
+        padding-top: 10%;
+        margin: auto;
+        width: 40%;
+        
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        
+        box-sizing: border-box;
+        position: relative;
+        
+    }
+    
+    .home_multimedia {
+        
+        width: 100%;
+        max-width: 500px;
+        height: 300px;
+        display: flex;
+        margin: auto;
+        box-sizing: border-box;
+        position: relative;
+        box-shadow: 10px 13px 10px #0009;
+        overflow: hidden;
+        border-radius: 5px;
+    }
+    
+    
+    
+}
