--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ a {
 .home_container2 p {
     position: absolute;
     left: 10%;
-    top: 105%;
+    top: 115%;
     width: 100%;
     max-width: 300px;
     display: flex;
@@ -105,7 +105,7 @@ header {
     width: 100%;
     height: 50px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: flex-end;
     padding-left: 0;
     
@@ -169,8 +169,16 @@ header {
     font-weight: bold;
 }
 
+ul {
+    width: 100%;
+    height: 100%;
+    display: flex;
+  
+}
+
 li {
-    width: 20px;
+    width: 33.33%;
+    height: 100%;
     background: none;
     color: inherit;
     border: none;
@@ -181,14 +189,16 @@ li {
 }
 
 li {
-    margin-top: 10px;
+    
     margin-right: 10px;
-    padding: 15px 40px;
+    
     font-size: 20px;
     line-height: 1em;
     text-shadow: 0 1px rgba(0, 0, 0, 0.4);
     color: white;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     vertical-align: middle;
     text-align: center;
     cursor: pointer;
@@ -221,7 +231,7 @@ li:active {
 }
 
 .home_info {
-    margin-top: 38%;
+    
     margin-left: 20%;
     width: 100%;
     max-width: 900px;
@@ -235,11 +245,11 @@ li:active {
     padding-top: 10%;
     margin: auto;
     width: 100%;
-    
+    margin-bottom: 10px;
     height: 100%;
     display: flex;
     flex-direction: column;
-    
+    gap: 10px;
     box-sizing: border-box;
     position: relative;
     
