--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,8 @@ a {
     background-size: cover;
     display: flex;
     justify-content: center;
+    position: relative;
+    z-index: -1;
 }
 
 
@@ -50,7 +52,8 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    position: relative;
+    z-index: -1;
 }
 
 .home_container2 img {
@@ -63,7 +66,7 @@ a {
 .home_container2 p {
     position: absolute;
     left: 10%;
-    top: 115%;
+    top: 100px;
     width: 100%;
     max-width: 300px;
     display: flex;
@@ -113,7 +116,7 @@ header {
 
 .title_logo {
     position: absolute;
-    right: 10%;
+    
     top: 50px;
     height: 100%;
     display: flex;
@@ -231,7 +234,8 @@ li:active {
 }
 
 .home_info {
-    
+    position: absolute;
+    bottom: 100px;
     margin-left: 20%;
     width: 100%;
     max-width: 900px;
@@ -370,7 +374,7 @@ img {
     }
 
     .title_logo {
-        
+        right: 10%;
         top: 0;
         
     }
@@ -396,7 +400,7 @@ img {
     .home_container2 p {
         position: absolute;
         left: 10%;
-        top: 120%;
+        top: 100px;
         width: 100%;
         max-width: 600px;
         display: flex;
@@ -436,8 +440,12 @@ img {
         right: 5%; */
         
         padding-top: 10%;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 10px;
+        
         margin: auto;
-        width: 40%;
+        width: 50%;
         
         height: 100%;
         display: flex;
