--- a/styles.css
+++ b/styles.css
@@ -1,475 +1,308 @@
 
+:root {
+    --bg_color: rgb(39, 20, 20);
+    --icons_color: orangered;
+    --youtube_icon-color: red;
+    --text_color: wheat;
+    --title_color: wheat;
+    --bg_home: url('./img/background_img/guitar-g85826b5d8_1920.jpg');
+    --bg_home2: url('./img/background_img/adventure-g1b012a983_1920.jpg');
+    --bg_about: url('./img/background_img/production-gcb26bc845_1920.jpg');
+    --bg_contact: url('./img/background_img/music-instruments-g38a4d5df4_1920.jpg');
+    --bg_over: rgba(7, 158, 228, 0.3);
+    --bg_behiden: rgba(204, 204, 204, 0.2);
+    --quote_color: rgb(49, 30, 6);
+    --bg_quote: url('./img/img_resources/bible-gf2ead3d2e_1920.jpg')
+    /* transition: background 0.1s ease-in-out;
+    -webkit-transition: background 0.1s ease-in-out;
+    -moz-transition: background 0.1s ease-in-out;
+    -ms-transition: background 0.1s ease-in-out;
+    -o-transition: background 0.1s ease-in-out; */
+}
+
 * {
-    
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    margin: auto;
-    /* background-image: url('./img/background_img/guitar-g85826b5d8_1920.jpg'); */
-    background-color: rgb(39, 20, 20);
-    
+
+}
+
+ul li p {
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style: none;
 }
 
 a {
-    color: inherit;
+    text-decoration: none;
 }
 
-
-.body_container {
-    width: 100vw;
-    height: 100vh;
-    
-    color: wheat;
-    
-    
-}
-
-.home_container {
+img {
     width: 100%;
-    height: 100%;
-    background-image: url('./img/background_img/guitar-g85826b5d8_1920.jpg');
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    z-index: -1;
+    display: block;
+    margin: auto;
 }
 
-
-.home_container2 {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(7, 158, 228, 0.3);
-    /* background-image: url('./img/background_img/music-g822d0d8f8_1920.jpg'); */
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: relative;
-    z-index: -1;
-}
-
-.home_container2 img {
-    margin-left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
-.home_container2 p {
-    position: absolute;
-    left: 10%;
-    top: 60px;
-    width: 100%;
-    max-width: 300px;
-    display: flex;
-    justify-content: center;
-    font-size: 14px;
-    color: rgb(49, 30, 6);
-}
-
-.bible {
-    width: 100%;
-    
-}
-
-
-.about_container {
-    width: 100%;
-    height: 100%;
-    background-image: url('./img/background_img/production-gcb26bc845_1920.jpg');
-    background-position: center;
-    background-size: cover;
-}
-
-.contact_container {
-    width: 100%;
-    height: 100%;
-    background-image: url('./img/background_img/music-instruments-g38a4d5df4_1920.jpg');
-    background-position: center;
-    background-size: cover;
-}
 
 header {
-    display: flex;
-    justify-content: center;
+    position: fixed;
+    margin: auto;
+    width: 100%;
+    height: 50px;
+    
 }
 
 .navbar {
-    position: fixed;
-    top: 0;
     width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-    padding-left: 0;
-    
-}
-
-.title_logo {
-    position: absolute;
-    
-    top: 50px;
     height: 100%;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-size: 25px;
-    text-shadow: 0px 3px 5px #00000009;
-    color: wheat;
-    
-}
-
-.fa-youtube {
-    font-size: 50px;
-    color: red;
-}
-
-.socials {
-    position: absolute;
-    right: 10%;
-    top: 200%;
-    width: 300px;
-    height: 30px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0.3rem;
-    /* background-color: rgba(204, 204, 204, 0.5);
-    border-radius: 50px; */
-}
-
-.social_icons {
-    color: orangered;
-    font-weight: bold;
-    font-size: 30px;
-    cursor: pointer;
-    
-}
-
-.whatsapp {
-    border-radius: 50px;
-    padding-right: 5px;
-    background-color: rgba(204, 204, 204, 0.2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.4rem;
-    
-}
-
-.whatsapp p {
-    font-size: 14px;
-    color: orangered;
-    font-weight: bold;
 }
 
 ul {
     width: 100%;
     height: 100%;
     display: flex;
-  
+    align-items: flex-end;
+    gap: 40px;
+    margin: auto;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 li {
-    width: 33.33%;
-    height: 100%;
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
+    font-size: 25px;
+    color: var(--text_color);
     cursor: pointer;
-    outline: inherit;
 }
 
-li {
-    
-    margin-right: 10px;
-    
-    font-size: 20px;
-    line-height: 1em;
-    text-shadow: 0 1px rgba(0, 0, 0, 0.4);
-    color: white;
+.title_logo {
+    position: absolute;
+    top: 100px;
+    margin: auto;
+    width: 100%;
+    max-width: 400px;
     display: flex;
-    justify-content: center;
     align-items: center;
-    vertical-align: middle;
-    text-align: center;
-    cursor: pointer;
-    font-weight: bold;
-    transition: background 0.1s ease-in-out;
-    -webkit-transition: background 0.1s ease-in-out;
-    -moz-transition: background 0.1s ease-in-out;
-    -ms-transition: background 0.1s ease-in-out;
-    -o-transition: background 0.1s ease-in-out;
-    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-    color: #fff;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    font-family: 'Helvetica Neue', Helvetica, sans-serif;
-    /* background-color: #f06060;
-    box-shadow: 0px 3px 0px 0px #cd1313; */
-    text-decoration: none;
+    gap: 10px;
+    color: var(--text_color);
+    padding: 10px;
+    font-size: 12px;
 }
 
-li:hover {
-    /* background-color: #ed4444; */
-    background-image: url('./img/background_img/guitar-g85826b5d8_1920.jpg');
+.fa-youtube {
+    font-size: 60px;
+    color: var(--youtube_icon-color);
+}
+
+.socials {
+    margin: auto;
+    width: 100%;
+    max-width: 600px;
+    height: 80px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+.whatsapp {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.whatsapp p {
+    color: var(--icons_color);
+}
+
+.social_icons {
+    font-size: 30px;
+    color: var(--icons_color);
+    cursor: pointer;
+}
+
+.home_container {
+    width: 100%;
+    height: 855px;
+    background-image: var(--bg_home);
     background-position: center;
     background-size: cover;
 }
 
-li:active {
-    box-shadow: 0px 1px 0px 0px #cd1313;
+.home_container2 {
+    width: 100%;
+    height: 855px;
+    display: flex;
+    flex-direction: column;
+    background-image: var(--bg_home2);
+    background-position: center;
+    background-size: cover;
+    padding: 10px;
+    gap: 20px;
+    position: relative;
+    z-index: -2;
+}
+
+.over_home_container2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bg_over);
+    z-index: -1;
+    
 }
 
 .home_info {
-    position: absolute;
-    bottom: 100px;
-    margin-left: 20%;
-    width: 100%;
-    max-width: 900px;
-}
-
-.multimedia_content {
-    /* position: absolute;
-    bottom: 10%;
-    right: 5%; */
-    
-    padding-top: 10%;
     margin: auto;
     width: 100%;
-    margin-bottom: 10px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    box-sizing: border-box;
-    position: relative;
+    max-width: 1024px;
+    padding-top: 450px;
+    left: 500px;
     
-}
-
-.home_multimedia {
-    
-    width: 100%;
-    max-width: 300px;
-    height: 150px;
-    display: flex;
-    margin: auto;
     box-sizing: border-box;
-    position: relative;
-    box-shadow: 10px 13px 10px #0009;
-    overflow: hidden;
-    border-radius: 5px;
-}
-
-.main_video {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: block;
     
 }
 
 .home_title {
+    width: 100%;
+    display: flex;
+    justify-content: center;
     margin: auto;
-    margin-top: 380px;
     font-size: 50px;
+    color: var(--title_color);
 }
 
 .home_p {
     width: 100%;
-    max-width: 200px;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    max-width: 600px;
+    margin: auto;
     font-size: 30px;
-
+    color: var(--text_color);
 }
 
-.about_content {
+.quote {
+    width: 100%;
+    aspect-ratio: 1;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+.quote p {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    font-size: 10px;
+    padding: 10px;
+    color: var(--quote_color);
+    background-image: var(--bg_quote);
+    background-position: center;
+    background-size: cover;
+    
+}
+
+.multimedia_content {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    gap: 20px;
+    
+}
+
+.home_multimedia {
+   width: 100%;
+   max-width: 400px;
+       
+}
+
+.main_video {
+    display: block;
     width: 100%;
     height: 100%;
-        
 }
-
-
-
-/* #About {
-    background-color: #608ef0;
-    box-shadow: 0px 3px 0px 0px #1364cd;
-} */
-
-#About:hover {
-    /* background-color: #449bed; */
-    background-image: url('./img/background_img/production-gcb26bc845_1920.jpg');
-    background-position: center;
-    background-size: cover;
-}
-
-#About:active {
-    box-shadow: 0px 1px 0px 0px #1364cd;
-}
-
-/* #Contact {
-    background-color: #78f060;
-    box-shadow: 0px 3px 0px 0px #13cd1c;
-} */
-
-#Contact:hover {
-    /* background-color: #60ed44; */
-    color: transparent;
-    background-image: url('./img/background_img/music-instruments-g38a4d5df4_1920.jpg');
-    background-position: center;
-    background-size: cover;
-}
-
-#Contact:active {
-    box-shadow: 0px 1px 0px 0px #13cd23;
-}
-
-/* #content {
-    max-width: 80%;
-    text-align: center;
-    margin: 40px auto;
-} */
-
-img {
-    width: 100%;
-    display: block;
-    max-width: 1000px;
-    margin: auto;
-}
-
-
-/* .about_container {
-    width: 100%;
-    background-color: wheat;
-} */
 
 
 @media (min-width: 850px) {
-    .navbar {
-        position: fixed;
-        top: 50px;
-        width: 100%;
-        height: 50px;
-        display: flex;
-        justify-content: flex-start;
-        align-items: flex-end;
-        padding-left: 10%;
-        
-    }
 
-    li {
-        width: 100px;
-        font-size: 25px;
+    ul {
+        
+        padding-left: 100px;
+        padding-right: 0;
     }
 
     .title_logo {
-        right: 10%;
-        top: 0;
-        
+        width: 900px;
+        top: 450px;
+        right: 100px;
+        font-size: 18px;
     }
     
-        
-    .socials {
-        
-        top: 100%;
-    }
-    
-    .home_container2 {
-        flex-direction: row;
-           
-    } 
-    
-    .home_container2 img {
-        margin-left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-    }
-    
-    .home_container2 p {
-        position: absolute;
-        left: 10%;
-        top: 100px;
-        width: 100%;
-        max-width: 600px;
-        display: flex;
-        justify-content: center;
-        font-size: 25px;
-        color: rgb(49, 30, 6);
-        
-    }
-    
-    .bible {
-        width: 60%;
-        
+    .fa-youtube {
+        font-size: 80px;
+        color: var(--youtube_icon-color);
     }
 
     .home_info {
-        margin-top: 38%;
-        margin-left: 30%;
-        width: 100%;
-        max-width: 900px;
+        padding-top: 600px;
+        left: 500px;
+        
+        
     }
 
-    .home_title {
-        margin-top: 30px;
-        font-size: 50px;
-    }
-    
-    .home_p {
-        width: 100%;
-        max-width: 800px;
-        font-size: 30px;
-    
+    .home_container2 {
+        flex-direction: row;
+        
     }
 
-    .multimedia_content {
-        /* position: absolute;
-        bottom: 10%;
-        right: 5%; */
-        
-        padding-top: 10%;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-bottom: 10px;
-        
-        margin: auto;
+    .quote {
         width: 50%;
-        
         height: 100%;
+        margin: auto;
         display: flex;
-        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         
-        box-sizing: border-box;
-        position: relative;
         
+    }
+    
+    .quote p {
+        width: 100%;
+        height: 80%;
+        font-size: 20px;
+        padding: 100px;
+        
+        
+    }
+    
+    .multimedia_content {
+        width: 50%;
+        height: 100%;
+                
     }
     
     .home_multimedia {
-        
-        width: 100%;
-        max-width: 500px;
-        height: 300px;
-        display: flex;
-        margin: auto;
-        box-sizing: border-box;
-        position: relative;
-        box-shadow: 10px 13px 10px #0009;
-        overflow: hidden;
-        border-radius: 5px;
+       width: 100%;
+       max-width: 300px;
+       height: 200px;
+       margin: auto;    
     }
-    
-    
-    
 }
