--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,10 @@ body {
 
 }
 
+.body_container {
+    z-index: -1;
+}
+
 ul li p {
     margin: 0;
     padding: 0;
@@ -56,7 +60,7 @@ header {
     margin: auto;
     width: 100%;
     height: 50px;
-    
+    z-index: 5;
 }
 
 .navbar {
@@ -79,11 +83,17 @@ li {
     font-size: 25px;
     color: var(--text_color);
     cursor: pointer;
+    transition: transform 0.5s ease;
+}
+
+li:hover {
+    transform: scale(1.05); 
+    transition: transform 0.5s ease;
 }
 
 .title_logo {
     position: absolute;
-    top: 100px;
+    top: 500px;
     margin: auto;
     width: 100%;
     max-width: 400px;
@@ -98,6 +108,12 @@ li {
 .fa-youtube {
     font-size: 60px;
     color: var(--youtube_icon-color);
+    transition: transform 0.5s ease;
+}
+
+.fa-youtube:hover {
+    transform: scale(1.05); 
+    transition: transform 0.5s ease;
 }
 
 .socials {
@@ -125,6 +141,12 @@ li {
     font-size: 30px;
     color: var(--icons_color);
     cursor: pointer;
+    transition: transform 0.5s ease;
+}
+
+.social_icons:hover {
+    transform: scale(1.05); 
+    transition: transform 0.5s ease;
 }
 
 .home_container {
@@ -146,7 +168,7 @@ li {
     padding: 10px;
     gap: 20px;
     position: relative;
-    z-index: -2;
+    
 }
 
 .over_home_container2 {
@@ -156,7 +178,7 @@ li {
     width: 100%;
     height: 100%;
     background-color: var(--bg_over);
-    z-index: -1;
+    
     
 }
 
@@ -164,7 +186,7 @@ li {
     margin: auto;
     width: 100%;
     max-width: 1024px;
-    padding-top: 450px;
+    padding-top: 80px;
     left: 500px;
     
     box-sizing: border-box;
@@ -199,6 +221,10 @@ li {
     justify-content: center;
     align-items: center;
     font-size: 20px;
+    border-radius: 5px;
+    overflow: hidden;
+    
+    z-index: 2;
 }
 
 .quote p {
@@ -209,13 +235,13 @@ li {
     width: 100%;
     max-width: 600px;
     height: 100%;
-    font-size: 10px;
+    font-size: 14px;
     padding: 10px;
     color: var(--quote_color);
     background-image: var(--bg_quote);
     background-position: center;
     background-size: cover;
-    
+    box-shadow: 0px 5px 10px #000003;
 }
 
 .multimedia_content {
@@ -225,14 +251,22 @@ li {
     flex-wrap: wrap;
     padding: 20px;
     gap: 20px;
-    
+    z-index: 2;
 }
 
 .home_multimedia {
    width: 100%;
    max-width: 400px;
-       
+   margin: auto;
+   box-shadow: 0px 5px 10px #000003;
+   overflow: hidden; 
+   transition: transform 0.5s ease;   
 }
+
+.home_multimedia:hover {
+    transform: scale(1.05); 
+    transition: transform 0.5s ease;   
+ }
 
 .main_video {
     display: block;
