--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ li:hover {
 
 .title_logo {
     position: absolute;
-    top: 500px;
+    top: 430px;
     margin: auto;
     width: 100%;
     max-width: 400px;
@@ -105,10 +105,40 @@ li:hover {
     font-size: 12px;
 }
 
+.title_logo h1 {
+    font-size: 35px;
+}
+
+.title_logo h1 p {
+    font-size: 25px;
+    font-weight: bold;
+    color: var(--icons_color);
+}
+
 .fa-youtube {
     font-size: 60px;
     color: var(--youtube_icon-color);
     transition: transform 0.5s ease;
+    animation-name: youtube_animation;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+    text-shadow: 0px 5px 10px #000003;
+}
+
+.fa-youtube:hover {
+    animation-play-state: paused;
+    text-shadow: none;
+}
+
+@keyframes youtube_animation {
+    0% {
+        transform: translateY(-4%);
+    }
+    100% {
+        transform: translateY(4%);
+    }
 }
 
 .fa-youtube:hover {
@@ -128,14 +158,43 @@ li:hover {
 }
 
 .whatsapp {
+    width: 35px;
+    height: 35px;
     display: flex;
     align-items: center;
     gap: 10px;
+    overflow: hidden;
+    transition: width 1s;
+    position: relative;
+}
+
+.whatsapp:hover {
+    width: 150px;
+    display: flex;
+   
+    transition: width 0.5s;
+    
+    
 }
 
 .whatsapp p {
+    position: absolute;
+    width: 100px;
+    height: 30px;
+    display: flex;
+    align-items: center;
     color: var(--icons_color);
+    transform: translateX(-100%);
+    transition: transform 1s;
 }
+
+.whatsapp:hover > .phone {
+    transform: translateX(30%);
+    transition: transform 1s;
+}
+
+
+
 
 .social_icons {
     font-size: 30px;
@@ -286,7 +345,7 @@ li:hover {
     .title_logo {
         width: 900px;
         top: 450px;
-        right: 100px;
+        right: 30px;
         font-size: 18px;
     }
     
@@ -296,7 +355,7 @@ li:hover {
     }
 
     .home_info {
-        padding-top: 600px;
+        padding-top: 100px;
         left: 500px;
         
         
