--- a/styles.css
+++ b/styles.css
@@ -57,11 +57,18 @@ img {
 .btn_menu {
     position: fixed;
     top: 30px;
-    left: 30px;
+    left: 40px;
     font-size: 35px;
     color: var(--text_color);
     cursor: pointer;
+    
     transition: transform 0.8s;
+}
+
+.hidden_menu {
+    opacity: 0;
+    transition: opacity 1s ease;
+    
 }
 
 .btn_menu:hover {
@@ -69,19 +76,14 @@ img {
     transition: transform 0.8s;
 }
 
-.hidden_menu {
-    transform: translateX(6000%);
-    transition: transform 1s ease;
-    
-}
 
 .btn_close-menu {
-    position: fixed;
-    top: 30px;
-    right: 30px;
+    position: absolute;
+    top: 0;
+    
     font-size: 35px;
     color: var(--icons_color);
-    transform: translateX(-6000%);
+    transform: translateX(-100%);
     transition: transform 0.8s ease;
     cursor: pointer;
 }
@@ -92,14 +94,14 @@ img {
 }
 
 .hidden_close-menu {
-    transform: translateX(0%);
+    transform: translateX(300px);
     transition: transform 0.8s ease;
     
 }
 
 .nav {
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: 30px;
     left: 0;
     margin: none;
     padding-top: 30px;
@@ -246,6 +248,7 @@ li:hover {
 }
 
 .whatsapp p {
+    color: inherit;
     position: absolute;
     width: 100px;
     height: 30px;
