--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 :root {
-    --bg_color: rgb(39, 20, 20);
+    --bg_color: rgba(39, 20, 20, 0.8);
     --icons_color: orangered;
     --youtube_icon-color: red;
     --text_color: wheat;
@@ -535,7 +535,7 @@ li:hover {
       
     .nav {
         position: fixed;
-        top: 30px;
+        top: 0;
         margin: auto;
         width: 100%;
         height: 50px;
@@ -544,10 +544,20 @@ li:hover {
         background-color: transparent;
         border-radius: none;
         box-shadow: none;
+        transition: background 1s ease;
         z-index: 5;
+    }
+
+    .bg_nav {
+        background-color: var(--bg_color);
+        transition: background 1s ease;
+        box-shadow: 0px 3px 7px #000003;
     }
     
     ul {
+        position: absolute;
+        top: 0;
+        height: 50px;
         flex-direction: row;
         padding-left: 100px;
         padding-right: 0;
@@ -564,6 +574,7 @@ li:hover {
         border-radius: 5px;
         cursor: pointer;
         transition: transform 0.5s ease;
+        
     }
 
     li:hover {
